# chatbot_FAQ_Voluntarios

./: .gitignore  README.md  app.py  casos_de_prueba.md  chat_logic.py  config.py  gemini_service.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  system_prompt.md  ui.py
.github/workflows/: main.yml  quality.yml
.streamlit/: config.toml  secrets.toml.example
assets/: styles.css
test/: test_dummy.py
tests/: test_app.py  test_chat_logic.py  test_config.py  test_gemini_service.py
