[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-faq-voluntarios"
version = "1.0.0"
description = "Chatbot FAQ para voluntarios de la Asociación Huella de Carbono (Streamlit + Gemini)"
readme = "README.md"
requires-python = ">=3.10"
# Dependencias que la app NECESITA para ejecutarse (también en requirements.txt para Streamlit Cloud)
dependencies = [
    "streamlit>=1.40.0",
    "google-genai>=2.8.0",
]

[project.optional-dependencies]
# Aquí van las dependencias de desarrollo (como pytest)
test = [
    "pytest",
    "pytest-cov"
]
dev = [
    "flake8",
    "black",
    "build"
]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
