[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-faq-voluntarios"
version = "1.0.0"
description = "Chatbot FAQ para voluntarios de la Asociación Huella de Carbono (Streamlit + Gemini)"
readme = "README.md"
requires-python = ">=3.10"
# Dependencias que la app NECESITA para ejecutarse (también en requirements.txt para Streamlit Cloud)
dependencies = [
    "streamlit>=1.40.0,<2.0.0",
    "google-genai>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
# Aquí van las dependencias de desarrollo (como pytest)
test = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
]
dev = [
    "flake8",
    "black",
    "build",
    "ruff>=0.9.0,<1.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests", "test"]
pythonpath = ["."]

[tool.coverage.run]
source = ["chat_logic", "config", "gemini_service"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
